objects/rosco_people__c/rosco_people__c.object-meta.xml
<CustomObject>
    <label>rosco_people</label>
    <nameField>
        <label>slackname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rosco_peoples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>