objects/rosco_people__c/fields/cc_contact_override__c.field-meta.xml
<CustomField>
    <fullName>cc_contact_override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>cc contact override</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>rosco_peoples (cc contact override)</relationshipLabel>
    <relationshipName>rosco_peoples1</relationshipName>
    <type>Lookup</type>
</CustomField>