objects/rosco_people__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>rosco_peoples</relationshipLabel>
    <relationshipName>rosco_peoples</relationshipName>
    <type>Lookup</type>
</CustomField>