objects/rosco_people__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <label>mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>