objects/rosco_people__c/fields/pod__c.field-meta.xml
<CustomField>
    <fullName>pod__c</fullName>
    <label>pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product SME</fullName>
            </value>
            <value>
                <fullName>Northeast and Canada</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Federal-Civ</fullName>
            </value>
            <value>
                <fullName>EMEA South</fullName>
            </value>
            <value>
                <fullName>EMEA North</fullName>
            </value>
            <value>
                <fullName>Asia North</fullName>
            </value>
            <value>
                <fullName>Asia South</fullName>
            </value>
            <value>
                <fullName>Product Engineering</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>TAM &amp; CS Leadership</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>ESO</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Partner Pod</fullName>
            </value>
            <value>
                <fullName>CSM-Central</fullName>
            </value>
            <value>
                <fullName>Order Ops</fullName>
            </value>
            <value>
                <fullName>CSM-East</fullName>
            </value>
            <value>
                <fullName>CSM-Intl</fullName>
            </value>
            <value>
                <fullName>CSM-West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>