objects/rosco_people__c/fields/primary_sme__c.field-meta.xml
<CustomField>
    <fullName>primary_sme__c</fullName>
    <label>primary_sme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>