objects/rosco_people__c/fields/pto__c.field-meta.xml
<CustomField>
    <fullName>pto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pto</label>
    <type>Checkbox</type>
</CustomField>