objects/rosco_people__c/fields/secondary_sme__c.field-meta.xml
<CustomField>
    <fullName>secondary_sme__c</fullName>
    <label>secondary_sme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>