objects/rosco_people__c/fields/slackid__c.field-meta.xml
<CustomField>
    <fullName>slackid__c</fullName>
    <label>slackid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>