objects/rosco_people__c/fields/ssme__c.field-meta.xml
<CustomField>
    <fullName>ssme__c</fullName>
    <label>ssme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SME-Infrastructure</fullName>
            </value>
            <value>
                <fullName>SME-Asset</fullName>
            </value>
            <value>
                <fullName>SME-Comply</fullName>
            </value>
            <value>
                <fullName>SME-Connect</fullName>
            </value>
            <value>
                <fullName>SME-Deploy</fullName>
            </value>
            <value>
                <fullName>SME-Discover</fullName>
            </value>
            <value>
                <fullName>SME-Incident Response</fullName>
            </value>
            <value>
                <fullName>SME-Tanium Index</fullName>
            </value>
            <value>
                <fullName>SME-Integrity Monitor</fullName>
            </value>
            <value>
                <fullName>SME-Console / Interact</fullName>
            </value>
            <value>
                <fullName>SME-Patch</fullName>
            </value>
            <value>
                <fullName>SME-Protect</fullName>
            </value>
            <value>
                <fullName>SME-Trends</fullName>
            </value>
            <value>
                <fullName>SME-Platform</fullName>
            </value>
            <value>
                <fullName>SME-Threat Response</fullName>
            </value>
            <value>
                <fullName>SME-Map</fullName>
            </value>
            <value>
                <fullName>SME-Reveal</fullName>
            </value>
            <value>
                <fullName>SME-Health Check</fullName>
            </value>
            <value>
                <fullName>SME-Performance</fullName>
            </value>
            <value>
                <fullName>EDR</fullName>
            </value>
            <value>
                <fullName>SME-Tanium Client Management (TCM)</fullName>
            </value>
            <value>
                <fullName>SME-Client Management</fullName>
            </value>
            <value>
                <fullName>SME-Network Quarantine Service</fullName>
            </value>
            <value>
                <fullName>SME-Enforce</fullName>
            </value>
            <value>
                <fullName>SME-Direct Connect (DEC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>