objects/rosco_people__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pod__c</columns>
    <columns>cc_contact_override__c</columns>
    <columns>contact__c</columns>
    <columns>user__c</columns>
    <columns>pto__c</columns>
    <columns>primary_sme__c</columns>
    <columns>secondary_sme__c</columns>
    <columns>mobile__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>